Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-15 (SVN):
    * sys_win.c, sys_dos.c (Sys_ConsoleInput): Removed isDedicated check.
      Host_GetConsoleCommands() already does that as it should.

2011-12-15 (SVN):
    * host_cmd.c (LoadGamestate): Close the file before signalling an error
      (noticed this in recent RMQ sources.)
    * quakedef.h: updated beta date stamp to 2011-12-15.

2011-12-12 (SVN):
    * Removed argument clamping from Sys_Sleep().

2011-12-12 (SVN):
    * Made the cmd argument of CL_SendMove() and CL_WriteDemoCmd() const.
    * Made the cmd argument of MSG_WriteUsercmd() const.
    * Made Sys_ConsoleInput() to return const.
    * quakedef.h: updated beta date stamp to 2011-12-12.

2011-12-10 (SVN):
    * Several minor cleanups.

2011-12-07 (SVN):
    * midi_mac.c (MIDI_Play): Fixed another typo.  Really compiles fine now.
    * midi_mac.c: Added missing brace in the CHECK_MIDI_ALIVE macro, should
      compile fine now.

2011-12-07 (SVN):
    * engine/hexenworld/shared/net_chan.c (Netchan_Setup, Netchan_Process):
      Reverted the chan->incoming_sequence pre-initialization to -1 change
      from Dec. 01 (rev. 4339), because it caused connection failures with
      new clients versus old servers ('reliable overflow' at server.)

2011-12-07 (SVN):
    * draw.c (Draw_ConsoleBackground): Add support for transparent console
      background in the software renderer.  This is actually an extension
      of the two already known transparency features: (1) sbtrans, which
      is status bar transparency, and (2) dmtrans, which is the deathmatch
      status overlay counterpart for sbtrans.  In parallel to sbtrans, the
      console background transparency is controlled by a new cvar contrans.
      The valid values for contrans are 0 (solid), 1 (transparent) and 2
      (very transparent).
    * quakedef.h: updated beta date stamp to 2011-12-07.

2011-12-07 (SVN):